# tenxor

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  wrapper.h
docs/: design.md  devlog.md
src/: h2d.rs  lib.rs  main.rs  transpose.cu  transpose.h
