[package]
name = "tenxor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[dependencies]
cudarc = { version = "0.18", default-features = false, features = [
  "cuda-13010",
  "dynamic-linking",
  "runtime",
] }
zstd = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
bytesize = "1.3"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"

[build-dependencies]
bindgen = "0.72"
cc = "1.0"
pkg-config = "0.3"

[profile.release]
lto = true
panic = "abort"
